# Cours_project_1

./: .env  .env_template  .gitignore  README.md  pyproject.toml  tree_root.py  user_settings.json
src/: main.py  reports.py  services.py  settings.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
